# funarchy

./: Anchor.toml  README.md  package.json  pnpm-lock.yaml
programs/amm/: Cargo.toml
programs/amm/src/: error.rs  lib.rs
programs/amm/src/instructions/: create_amm.rs  mod.rs  swap.rs
programs/amm/src/state/: amm.rs
programs/autocrat/: Cargo.toml
programs/autocrat/src/: lib.rs
programs/autocrat/src/instructions/: finalize_proposal.rs  initialize_proposal.rs  mod.rs
programs/autocrat/src/state/: proposal.rs
scripts/: consts.ts  crankTwap.ts  initializeDao.ts  initializeVault.ts  main.ts
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: AmmClient.ts  AutocratClient.ts  ConditionalVaultClient.ts  InstructionHandler.ts  constants.ts
sdk/src/types/: amm.ts  autocrat.ts  index.ts
sdk/src/utils/: pda.ts
tests/: amm.ts  autocrat.ts
tests/utils/: pdaGenerator.ts  programFacade.ts  testUtils.ts
