[package]
name = "autocrat"
version = "0.3.0"
description = "SVM-based program for running futarchy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autocrat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-spl = { version = "^0.30.0", features = ["metadata"] }
anchor-lang = "^0.30.0"
solana-security-txt = "1.1.1"
amm = { path = "../amm", features = ["cpi"] }
